tests/spec/emit/snapshots/defer_native_method_iife_snapshots_mutable_identifier_argument.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn run() {
    let mut dst = [0, 0, 0]
    let mut src = [1, 2, 3]
    defer dst.copy_from(src)
    src = [9, 9, 9]
  }
---
package main

func run() {
	dst := []int{0, 0, 0}
	src := []int{1, 2, 3}
	arg := dst
	arg_1 := src
	defer func() {
		_ = copy(arg, arg_1)
	}()
	src = []int{9, 9, 9}
}
