tests/spec/emit/snapshots/defer_native_method_inlined_to_builtin_wraps_in_iife.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let xs = [1]
    defer xs.length()
  }
---
package main

func test() {
	xs := []int{1}
	defer func() {
		_ = len(xs)
	}()
}
