tests/spec/emit/snapshots/defer_simple.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    defer fmt.Print("cleanup")
  }
---
package main

import "fmt"

func test() {
	defer fmt.Print("cleanup")
}
