tests/spec/emit/snapshots/defer_static_native_method_iife_captures_value_receiver.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let items = [1, 2, 3]
    defer Slice.length(items)
  }
---
package main

func test() {
	items := []int{1, 2, 3}
	defer func() {
		_ = len(items)
	}()
}
