tests/spec/emit/snapshots/defer_static_native_method_iife_on_alias_captures_value_receiver.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  type MyString = string
  
  fn test() {
    let s = "hi"
    defer MyString.length(s)
  }
---
package main

type MyString = string

func test() {
	s := "hi"
	defer func() {
		_ = len(s)
	}()
}
