tests/spec/emit/snapshots/defer_with_method_call.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nimport \"go:fmt\"\n\nstruct Resource {}\n\nimpl Resource {\n  fn close(self) {\n    fmt.Print(\"closed\");\n  }\n}\n\nfn test() {\n  let r = Resource {};\n  defer r.close()\n}\n"
---
package main

import "fmt"

type Resource struct{}

func (r Resource) close() {
	fmt.Print("closed")
}

func test() {
	r := Resource{}
	defer r.close()
}
