tests/spec/emit/snapshots/deref_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn mutate(r: mut Ref<int>) {
    r.* = 99
  }
  
  fn test() -> int {
    let mut x = 1;
    mutate(&x);
    x
  }
---
package main

func mutate(r *int) {
	*r = 99
}

func test() int {
	x := 1
	mutate(&x)
	return x
}
