tests/spec/emit/snapshots/deref_dot_assignment_on_call_result.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  fn main() {
    let mut b = Box { x: 1 }
    let get = || &b
    get().*.x = 2
  }
---
package main

type Box struct {
	x int
}

func main() {
	b := Box{x: 1}
	get := func() *Box {
		return &b
	}
	get().x = 2
}
